# annul

./: .gitignore  Cargo.toml  build.ninja
dicts/: debian.tar.zstd-dictionary  diff.zstd-dictionary  orig.zstd-dictionary
src/: main.rs  strings.rs
