[package]
name = "annul"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
cast = "0.2.2"
failure = "0.1.5"
http_req = "0.4.3"
tempfile = "3.0.5"
tempfile-fast = "0.2.4"
walkdir = "2.2.7"
zstd = "0.4"

splayers = { git = "https://github.com/FauxFaux/splayers" }
